Fix for Samsung Internet Browser on Mobile (#5)

--- a/Pages/Toys/StarWars.razor.css
+++ b/Pages/Toys/StarWars.razor.css
@@ -1,4 +1,3 @@
 ﻿.btn-icon {
-    height: 40%;
     max-width: 50%;
 }
